5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4427/executions/1679_1105.log
== TEST (2019-04-30 17:11:31) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if x != lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta:
	print ("Brasao invalido")
elif (x==lobo):
	print ("Casa: Stark")
elif (x==leao):
	print ("Casa: Lannister")
elif (x==veado):
	print ("Casa: Baratheon")
elif (x==dragao):
	print ("Casa: Targaryen")
elif (x==rosa):
	print ("Casa: Tyrell")
elif (x==sol):
	print ("Casa: Martell")
elif (x==lula):
	print ("Casa: Greyjoy")
elif (x==esfolado):
	print ("Casa: Bolton")
elif (x==turta):
	print ("Casa: Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if x != lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta:
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:14:36) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x != lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta):
	print ("Brasao invalido")
elif (x==lobo):
	print ("Casa: Stark")
elif (x==leao):
	print ("Casa: Lannister")
elif (x==veado):
	print ("Casa: Baratheon")
elif (x==dragao):
	print ("Casa: Targaryen")
elif (x==rosa):
	print ("Casa: Tyrell")
elif (x==sol):
	print ("Casa: Martell")
elif (x==lula):
	print ("Casa: Greyjoy")
elif (x==esfolado):
	print ("Casa: Bolton")
elif (x==turta):
	print ("Casa: Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (x != lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:15:17) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !=lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta):
	print ("Brasao invalido")
elif (x==lobo):
	print ("Casa: Stark")
elif (x==leao):
	print ("Casa: Lannister")
elif (x==veado):
	print ("Casa: Baratheon")
elif (x==dragao):
	print ("Casa: Targaryen")
elif (x==rosa):
	print ("Casa: Tyrell")
elif (x==sol):
	print ("Casa: Martell")
elif (x==lula):
	print ("Casa: Greyjoy")
elif (x==esfolado):
	print ("Casa: Bolton")
elif (x==turta):
	print ("Casa: Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (x !=lobo and x !=leao and x !=veado and x !=dragao and x !=rosa and x !=sol and x !=lula and x !=esfolado and x !=turta):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:16:52) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !="lobo" and x !="leao" and x !="veado" and x !="dragao" and x !="rosa" and x !="sol" and x !="lula" and x !="esfolado" and x !="turta"):
	print ("Brasao invalido")
elif (x==lobo):
	print ("Casa: Stark")
elif (x==leao):
	print ("Casa: Lannister")
elif (x==veado):
	print ("Casa: Baratheon")
elif (x==dragao):
	print ("Casa: Targaryen")
elif (x==rosa):
	print ("Casa: Tyrell")
elif (x==sol):
	print ("Casa: Martell")
elif (x==lula):
	print ("Casa: Greyjoy")
elif (x==esfolado):
	print ("Casa: Bolton")
elif (x==turta):
	print ("Casa: Tully")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    elif (x==lobo):
NameError: name 'lobo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:18:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !="lobo" and x !="leao" and x !="veado" and x !="dragao" and x !="rosa" and x !="sol" and x !="lula" and x !="esfolado" and x !="turta"):
	print ("Brasao invalido")
elif (x=="lobo"):
	print ("Casa: Stark")
elif (x=="leao"):
	print ("Casa: Lannister")
elif (x=="veado"):
	print ("Casa: Baratheon")
elif (x=="dragao"):
	print ("Casa: Targaryen")
elif (x=="rosa"):
	print ("Casa: Tyrell")
elif (x=="sol"):
	print ("Casa: Martell")
elif (x=="lula"):
	print ("Casa: Greyjoy")
elif (x=="esfolado"):
	print ("Casa: Bolton")
elif (x=="turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:18:18) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !="lobo" and x !="leao" and x !="veado" and x !="dragao" and x !="rosa" and x !="sol" and x !="lula" and x !="esfolado" and x !="turta"):
	print ("Brasao invalido")
elif (x=="lobo"):
	print ("Casa: Stark")
elif (x=="leao"):
	print ("Casa: Lannister")
elif (x=="veado"):
	print ("Casa: Baratheon")
elif (x=="dragao"):
	print ("Casa: Targaryen")
elif (x=="rosa"):
	print ("Casa: Tyrell")
elif (x=="sol"):
	print ("Casa: Martell")
elif (x=="lula"):
	print ("Casa: Greyjoy")
elif (x=="esfolado"):
	print ("Casa: Bolton")
elif (x=="turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 17:18:27) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !="lobo" and x !="leao" and x !="veado" and x !="dragao" and x !="rosa" and x !="sol" and x !="lula" and x !="esfolado" and x !="turta"):
	print ("Brasao invalido")
elif (x=="lobo"):
	print ("Casa: Stark")
elif (x=="leao"):
	print ("Casa: Lannister")
elif (x=="veado"):
	print ("Casa: Baratheon")
elif (x=="dragao"):
	print ("Casa: Targaryen")
elif (x=="rosa"):
	print ("Casa: Tyrell")
elif (x=="sol"):
	print ("Casa: Martell")
elif (x=="lula"):
	print ("Casa: Greyjoy")
elif (x=="esfolado"):
	print ("Casa: Bolton")
elif (x=="turta"):
	print ("Casa: Tully")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 17:18:37) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída

x= input ("descricao do brasao:  ")
print ("Entrada:",x)

if (x !="lobo" and x !="leao" and x !="veado" and x !="dragao" and x !="rosa" and x !="sol" and x !="lula" and x !="esfolado" and x !="turta"):
	print ("Brasao invalido")
elif (x=="lobo"):
	print ("Casa: Stark")
elif (x=="leao"):
	print ("Casa: Lannister")
elif (x=="veado"):
	print ("Casa: Baratheon")
elif (x=="dragao"):
	print ("Casa: Targaryen")
elif (x=="rosa"):
	print ("Casa: Tyrell")
elif (x=="sol"):
	print ("Casa: Martell")
elif (x=="lula"):
	print ("Casa: Greyjoy")
elif (x=="esfolado"):
	print ("Casa: Bolton")
elif (x=="turta"):
	print ("Casa: Tully")
-- EXECUTION TIME:
0.181483
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
